--- a/docs/i18n/de/LC_MESSAGES/latex.po
+++ b/docs/i18n/de/LC_MESSAGES/latex.po
@@ -1,16 +1,24 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) 2010-2014 Daniel Kastl, Frédéric Junod
+# This file is distributed under the same license as the Workshop - FOSS4G routing with pgRouting package.
 # 
+# Translators:
+# Daniel Kastl, 2014
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop - FOSS4G routing with pgRouting 2013\n"
+"Project-Id-Version: Workshop\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-07 10:18\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2014-11-10 09:37+0900\n"
+"PO-Revision-Date: 2014-11-10 02:40+0000\n"
+"Last-Translator: Daniel Kastl\n"
+"Language-Team: German (http://www.transifex.com/projects/p/pgrouting-workshop/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: de\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+# 684af824be144c748651ea7a675f831c
 #: ../../latex.rst:13
 msgid "pgRouting Workshop - Latex generation (doesn't include this page)"
-msgstr ""
+msgstr "pgRouting Workshop - Latex-Erstellung (diese Seite ist nicht enthalten)"
