--- a/docs/i18n/es/LC_MESSAGES/index.po
+++ b/docs/i18n/es/LC_MESSAGES/index.po
@@ -1,5 +1,5 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2013 Hal Seki, Yves Jacolin, Daniel Kastl, Frédéric Junod
+# Copyright (C) 2010-2014 Daniel Kastl, Frédéric Junod
 # This file is distributed under the same license as the Workshop - FOSS4G routing with pgRouting package.
 # 
 # Translators:
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-29 23:39\n"
-"PO-Revision-Date: 2014-05-13 17:50+0000\n"
-"Last-Translator: Celia Virginia Vergara Castillo\n"
+"POT-Creation-Date: 2014-11-10 09:37+0900\n"
+"PO-Revision-Date: 2014-11-10 00:40+0000\n"
+"Last-Translator: Daniel Kastl\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/pgrouting-workshop/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,20 +18,19 @@ msgstr ""
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-# eafc554cee9a4eb19914dfc944ce2db4
+# 4893480a474f4334a1028d2d1174a03b
 #: ../../index.rst:13
 msgid "pgRouting Workshop Manual"
 msgstr " Manual del taller de pgRouting"
 
-# b55759839907407fb2c07ca11c8f790d
+# b9877258f94e41b6b18d58e6773b49de
 #: ../../index.rst:15
 msgid ""
 "*\"FOSS4G routing with pgRouting, OpenStreetMap road data and OpenLayers "
-"3\"*, primarly written for the `FOSS4G2013 Workshop "
-"<http://2013.foss4g.org/conf/programme/workshops/16/>`_."
-msgstr "*\"FOSS4G enrutamiento con pgRouting, datos de calles de OpenStreetMap y OpenLayers 3\"*, principalmente escrito para el `Taller FOSS4G2013 <http://2013.foss4g.org/conf/programme/workshops/16/>`_."
+"3\"*."
+msgstr ""
 
-# c42043cb0e124462b6ff82955222f50b
+# f63cecb0b935411997f0caa09747040f
 #: ../../index.rst:18
 msgid "Contents"
 msgstr "Contenido"
