--- a/docs/i18n/ja/LC_MESSAGES/index.po
+++ b/docs/i18n/ja/LC_MESSAGES/index.po
@@ -1,16 +1,16 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2013 Hal Seki, Yves Jacolin, Daniel Kastl, Frédéric Junod
+# Copyright (C) 2010-2014 Daniel Kastl, Frédéric Junod
 # This file is distributed under the same license as the Workshop - FOSS4G routing with pgRouting package.
 # 
 # Translators:
-# Ko Nagase <nagase@georepublic.co.jp>, 2013
+# Ko Nagase <nagase@georepublic.co.jp>, 2013-2014
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-29 23:39\n"
-"PO-Revision-Date: 2014-05-08 16:03+0000\n"
-"Last-Translator: Daniel Kastl\n"
+"POT-Creation-Date: 2014-11-10 09:37+0900\n"
+"PO-Revision-Date: 2014-11-10 14:31+0000\n"
+"Last-Translator: Ko Nagase <nagase@georepublic.co.jp>\n"
 "Language-Team: Japanese (http://www.transifex.com/projects/p/pgrouting-workshop/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,20 +18,19 @@ msgstr ""
 "Language: ja\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-# eafc554cee9a4eb19914dfc944ce2db4
+# 4893480a474f4334a1028d2d1174a03b
 #: ../../index.rst:13
 msgid "pgRouting Workshop Manual"
 msgstr "pgRouting ワークショップマニュアル"
 
-# b55759839907407fb2c07ca11c8f790d
+# b9877258f94e41b6b18d58e6773b49de
 #: ../../index.rst:15
 msgid ""
 "*\"FOSS4G routing with pgRouting, OpenStreetMap road data and OpenLayers "
-"3\"*, primarly written for the `FOSS4G2013 Workshop "
-"<http://2013.foss4g.org/conf/programme/workshops/16/>`_."
-msgstr "*\"FOSS4G routing with pgRouting, OpenStreetMap road data and OpenLayers 3\"* は、主に `FOSS4G2013 ワークショップ <http://2013.foss4g.org/conf/programme/workshops/16/>`_ のために書かれました。"
+"3\"*."
+msgstr "*\"pgRouting、OpenStreetMap 道路データ、OpenLayers 3 による FOSS4G ルート検索\"*."
 
-# c42043cb0e124462b6ff82955222f50b
+# f63cecb0b935411997f0caa09747040f
 #: ../../index.rst:18
 msgid "Contents"
 msgstr "コンテンツ"
